# ss928_yolov5_demo

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md  build.sh
cmake/: cmakebase.cmake  project.cmake  ss928.cmake
doc/: rundemo.sh
doc/atc/: atc.md  op.cfg
doc/ncnn/: aarch64-mix210-linux.toolchain.cmake  build_aarch64-mix210-linux.sh  readme.md
sample/: sample_vio.c
ss928sdk/common/: Makefile  loadbmp.c  loadbmp.h  sample_comm.h  sample_comm_audio.c  sample_comm_isp.c  sample_comm_mipi_tx.c  sample_comm_region.c  sample_comm_sys.c  sample_comm_vdec.c  sample_comm_venc.c  sample_comm_vi.c  sample_comm_vo.c  sample_comm_vpss.c
ss928sdk/common/audio/adp/: audio_aac_adp.c  audio_aac_adp.h  audio_dl_adp.c  audio_dl_adp.h
ss928sdk/include/: ss_aacdec.h  ss_aacenc.h  ss_ivs_md.h  ss_mpi_ae.h  ss_mpi_audio.h  ss_mpi_avs.h  ss_mpi_avs_conversion.h  ss_mpi_avs_lut_generate.h  ss_mpi_avs_pos_query.h  ss_mpi_awb.h  ss_mpi_cipher.h  ss_mpi_dpu_match.h  ss_mpi_dpu_rect.h  ss_mpi_dsp.h  ss_mpi_fisheye_calibration.h  ss_mpi_gdc.h  ss_mpi_hdmi.h  ss_mpi_hnr.h  ss_mpi_isp.h  ss_mpi_klad.h  ss_mpi_mau.h  ss_mpi_mcf.h  ss_mpi_mcf_calibration.h  ss_mpi_mcf_vi.h  ss_mpi_motionfusion.h  ss_mpi_otp.h  ss_mpi_pciv.h  ss_mpi_photo.h  ss_mpi_region.h  ss_mpi_snap.h  ss_mpi_sys.h  ss_mpi_tde.h  ss_mpi_uvc.h  ss_mpi_vb.h  ss_mpi_vdec.h  ss_mpi_venc.h  ss_mpi_vgs.h  ss_mpi_vi.h  ss_mpi_vo.h  ss_mpi_vpss.h  (+2 more)
svp/common/: sample_common_svp.c  sample_common_svp.h  sample_common_svp_npu.c  sample_common_svp_npu.h  sample_common_svp_npu_model.c  sample_common_svp_npu_model.h
svp/npu/: sample_npu_main.c  yolov5.cpp
svp/npu/include/: sample_npu_model.h  sample_npu_process.h  wrapperncnn.h
svp/npu/sample_svp_npu/: sample_npu_model.c  sample_npu_process.c
thridpart/ncnn/include/: platform.h
